css/styles2.css
/* Web Palette */
/*
Navy - #0B2836
Turquoise - #56DBD6
Pink - #F72351
*/


/* App */
html{
  box-sizing: border-box;
  font-family: Avenir;
  color: #0B2836;
}
body{
  width: 100%;
}

*, *:before, *:after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}



.header {
  margin: 0 auto;
  /* width: 100%; */
  font-weight: 900;
  height: 1100px;
  background-color: rgb(192, 193, 198);
}

#logo{
  transform: translate(0%, 0%);
  /* margin: 0 50%; */
  width: 200px;
  height: 200px;
}
.heading{
  font-size: 72px;
  font-weight: 700;
}

.title-meet{
  font-size: 2em;
  font-weight: 700;
  margin: 50px auto;
  margin-bottom: 280px;
}

.title-span{
  font-size: 3em;
}
a{
  text-decoration: none;
  color: white;
}

.see-mattress-btn{
  background-color: #F72351;
  color: white;
  font-size: 3em;
  font-weight: 500;
  padding: 50px 100px;
  width: 80%;
  border-radius: 10px;
}

.info-card{
  margin: 0 auto;

  width: 100%;
  height: 900px;
  padding: 100px 50px;
}
.premium-title{
  display: grid;
  grid-template-columns: 30% 70%;
}
.jungle-box{
  align-content: center;
}
.subheading{
  font-size: 4em;
  margin-bottom: 60px;
}
p > span {
  display: block;
}

p {
  font-size: 48px;
}


/*Universal classes */
.uppercase{
  text-transform: uppercase;
}
.center{
  text-align: center;
}

.see-the-mattress-card{
  font-size: 3em;
  margin: 0 auto;
  width: 100%;
  text-align: center;
  font-weight: 900;
  height: 1100px;
}

.contact-card{
  background-color:#0B2836;
  color: white;
  height: 1050px;
  padding: 50px;
}
.contact-title{
  margin-bottom: 30px;
}
.contact-para{
  width:90%;
  margin: 30px auto;

}
.contact-square{
  display: grid;
  grid-template-columns: 70% 30%;
  font-size: 36px;
  height: 400px;
  width: 90%;
  margin: 0 auto;
}
.contact-left-info{
  grid-template-columns: 100%;
  grid-template-rows: 50% 50%;

}
.contact-left-info > .contact-text{
  border: 2px solid #56DBD6;
  margin: auto;
  height: 200px;
}
.contact-right-faq{
  border: 2px solid #56DBD6;

}

ul{
  list-style: none;
  font-size: 2em;
}

